# Cooperative-Visitor

./: CMakeLists.txt  README.md
code/include/: Visitable.hpp  Visitable.inl  Visitor.hpp  Visitor.inl  VisitorDetails.hpp
code/src/: main.cpp
